[gd_scene load_steps=15 format=3 uid="uid://k107v18q8nny"]

[ext_resource type="Script" path="res://game/main_scene.gd" id="1_8qkgv"]
[ext_resource type="PackedScene" uid="uid://bb8yvsx0g14vl" path="res://addons/dialog-parser/src/line_reader.tscn" id="1_wgwtm"]
[ext_resource type="Script" path="res://game/InstructionHandlerCustom.gd" id="2_8k1vr"]
[ext_resource type="PackedScene" uid="uid://jehkf8i5k1og" path="res://game/game.tscn" id="2_im3iw"]
[ext_resource type="PackedScene" uid="uid://d2y2irch25bkd" path="res://systems/options/options_menu.tscn" id="3_77ee1"]
[ext_resource type="PackedScene" uid="uid://2adev3wrrsw5" path="res://systems/main_menu.tscn" id="4_ippob"]
[ext_resource type="Script" path="res://game/Evaluator.gd" id="5_loefn"]
[ext_resource type="Script" path="res://game/Black.gd" id="6_3o4gu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldi65"]
content_margin_left = 14.0
content_margin_right = 24.0
bg_color = Color(0.12549, 0.105882, 0.0627451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6p7q"]
content_margin_left = 15.0
content_margin_top = 9.0
content_margin_right = 15.0
content_margin_bottom = 9.0
bg_color = Color(0.133333, 0.0627451, 0.00392157, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.537255, 0.45098, 0.278431, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 4

[sub_resource type="Theme" id="Theme_k7ovv"]
Label/styles/normal = SubResource("StyleBoxFlat_ldi65")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_r6p7q")

[sub_resource type="Gradient" id="Gradient_cw7l5"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5dn0v"]
gradient = SubResource("Gradient_cw7l5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mm5ej"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.290196)
border_width_left = 10
border_width_top = 20
border_width_right = 10
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_8qkgv")

[node name="GameViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 768.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SubViewport" type="SubViewport" parent="GameViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Game" parent="GameViewportContainer/SubViewport" instance=ExtResource("2_im3iw")]

[node name="OptionsViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="OptionsViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="OptionsMenu" parent="OptionsViewportContainer/SubViewport" instance=ExtResource("3_77ee1")]

[node name="MainMenuViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="MainMenuViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="MainMenu" parent="MainMenuViewportContainer/SubViewport" instance=ExtResource("4_ippob")]

[node name="LineReader" parent="." node_paths=PackedStringArray("choice_container", "choice_option_container", "instruction_handler", "text_content", "text_container", "name_label", "name_container", "inline_evaluator") instance=ExtResource("1_wgwtm")]
show_text_during_choices = true
show_advance_available = false
property_for_name = "character"
name_for_blank_name = "narrator"
name_map = {
"capra": "Capra"
}
choice_container = NodePath("../Dialog/Control/ChoiceContainer")
choice_option_container = NodePath("../Dialog/Control/ChoiceContainer/ChoiceItemContainer")
instruction_handler = NodePath("InstructionHandlerCustom")
text_content = NodePath("../Dialog/Control/TextContainer/MarginContainer/VBoxContainer/PanelContainer/BottomText")
text_container = NodePath("../Dialog/Control/TextContainer")
name_label = NodePath("../Dialog/Control/TextContainer/MarginContainer/VBoxContainer/Label")
name_container = NodePath("../Dialog/Control/TextContainer/MarginContainer/VBoxContainer/Label")
inline_evaluator = NodePath("../Evaluator")

[node name="InstructionHandlerCustom" type="Node" parent="LineReader"]
script = ExtResource("2_8k1vr")

[node name="Dialog" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Dialog"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_k7ovv")

[node name="TextContainer" type="CenterContainer" parent="Dialog/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -157.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Dialog/Control/TextContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Dialog/Control/TextContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="Dialog/Control/TextContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "name here"

[node name="PanelContainer" type="PanelContainer" parent="Dialog/Control/TextContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="BottomText" type="RichTextLabel" parent="Dialog/Control/TextContainer/MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(900, 130)
layout_mode = 2
text = "enter bottom text here"
fit_content = true
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="FullTextContainer" type="PanelContainer" parent="Dialog/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Dialog/Control/FullTextContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_5dn0v")

[node name="CenterContainer" type="CenterContainer" parent="Dialog/Control/FullTextContainer"]
custom_minimum_size = Vector2(900, 600)
layout_mode = 2
mouse_filter = 2

[node name="FullText" type="RichTextLabel" parent="Dialog/Control/FullTextContainer/CenterContainer"]
custom_minimum_size = Vector2(900, 600)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "jghjkgkhjkjhk ghjk"
fit_content = true

[node name="ChoiceContainer" type="PanelContainer" parent="Dialog/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mm5ej")

[node name="ChoiceItemContainer" type="VBoxContainer" parent="Dialog/Control/ChoiceContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Evaluator" type="Node" parent="."]
script = ExtResource("5_loefn")

[node name="Black" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("6_3o4gu")

[node name="ColorRect" type="ColorRect" parent="Black"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0352941, 0.0352941, 0.0392157, 1)

[connection signal="make_screen_black" from="LineReader/InstructionHandlerCustom" to="Black" method="_on_instruction_handler_make_screen_black"]
[connection signal="set_actor_name" from="LineReader/InstructionHandlerCustom" to="LineReader" method="set_actor_name"]
[connection signal="set_text_content" from="LineReader/InstructionHandlerCustom" to="." method="set_text_content"]
[connection signal="instruction_completed" from="Black" to="LineReader/InstructionHandlerCustom" method="_on_black_instruction_completed"]
